custom-apps/external-name/plex/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: external-plex-ingress
  namespace: external-services
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`plex.finnhartshorn.com`)
      kind: Rule
      services:
        - name: external-plex
          kind: Service
          port: 32400
  tls:
    secretName: wildcard-tls
